# so-arm101-ros2

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  README_origin.md  install_deps.bash
camera_driver/config/: realsense_release_params.yaml
camera_driver/launch/: realsense_debug.launch.py  realsense_release.launch.py
camera_driver_cpp/: CMakeLists.txt  package.xml
camera_driver_cpp/config/: camera_params.yaml
camera_driver_cpp/launch/: camera.launch.py
camera_driver_cpp/scripts/: check_camera.sh
camera_driver_cpp/src/: camera_driver_node.cpp
charuco_calibration/: README.md  calibrate_charuco.py  capture_images.py  create_charuco_board.py  verify_calibration.py
hsv_filter_cpp/: CMakeLists.txt  package.xml
hsv_filter_cpp/config/: params.yaml
hsv_filter_cpp/launch/: filter.launch.py
hsv_filter_cpp/src/: hsv_filter_node.cpp
so101_description/: package.xml
so101_description/urdf/: so101_new_calib.urdf
so101_hardware/: CMakeLists.txt  Doxyfile  package.xml  test_sdk  test_sdk.cpp
so101_hardware/docs/html/: INST_8h.html  INST_8h__dep__incl.map  INST_8h__dep__incl.md5  INST_8h_source.html  SCSCL_8cpp.html  SCSCL_8cpp__incl.map  SCSCL_8cpp__incl.md5  SCSCL_8h.html  SCSCL_8h__dep__incl.map  SCSCL_8h__dep__incl.md5  SCSCL_8h__incl.map  SCSCL_8h__incl.md5  SCSCL_8h_source.html  SCS_8cpp.html  SCS_8cpp__incl.map  SCS_8cpp__incl.md5  SCS_8h.html  SCS_8h__dep__incl.map  SCS_8h__dep__incl.md5  SCS_8h__incl.map  SCS_8h__incl.md5  SCS_8h_source.html  SCSerial_8cpp.html  SCSerial_8cpp__incl.map  SCSerial_8cpp__incl.md5  SCSerial_8h.html  SCSerial_8h__dep__incl.map  SCSerial_8h__dep__incl.md5  SCSerial_8h__incl.map  SCSerial_8h__incl.md5  SCSerial_8h_source.html  SCServo_8h.html  SCServo_8h__incl.map  SCServo_8h__incl.md5  SCServo_8h_source.html  SMSBL_8cpp.html  SMSBL_8cpp__incl.map  SMSBL_8cpp__incl.md5  SMSBL_8h.html  (+284 more)
so101_hardware/src/: so101_system.cpp
so101_moveit/: package.xml
so101_moveit/config/: motor_calibration.yaml  moveit.rviz  so101_new_calib.srdf
so101_moveit/launch/: demo.launch.py  test_hardware.launch.py
sts_feetech_driver/: package.xml  setup.cfg  setup.py
sts_feetech_driver/config/: sts_feetech_driver_params.yaml
sts_feetech_driver/launch/: sts_feetech_driver.launch.py
sts_feetech_driver/sts_feetech_driver/: sts_feetech_driver.py
(+50 files in other folders)
